fixed github spacing

--- a/src/styles/home.scss
+++ b/src/styles/home.scss
@@ -86,7 +86,7 @@ img#selfImg {
   #Exlinks{ 
     img{
       width:70%;
-      height: 100px;
+      height: 120px;
     }
   }  
  
